--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-code-highlight",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "Ember-CLI highlight.js wrapper (for Ember-CLI 0.2.3+).",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,32 +11,33 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "git@github.com:lifegadget/ui-code-highlight.git",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Ken Snyder",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "0.2.3",
     "ember-cli-app-version": "0.3.3",
+    "ember-cli-autoprefixer": "0.3.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "0.0.8",
-    "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
-    "ember-export-application-global": "^1.0.2",
     "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-export-application-global": "^1.0.2",
     "ember-try": "0.0.4"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
+    "ember-cli-htmlbars": "0.7.4",
     "ember-cli-babel": "^5.0.0"
   },
   "ember-addon": {
