added divshot demo and tightened up code-reference

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ember-try": "0.0.4"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon","ui","code"
   ],
   "dependencies": {
     "ember-cli-htmlbars": "0.7.4",
